# patience

./: CMakeLists.txt  README.md
include/core/: card.hpp
src/: CMakeLists.txt  main.cpp
src/core/: card.cpp
tests/: CMakeLists.txt
tests/core/: card_test.cpp
